fix logo spacing

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -172,10 +172,10 @@
   cursor: pointer;
   display: flex !important;
   justify-content: space-between;
-  width: 140px !important;
+  width: 170px !important;
 
   h4 {
-    margin: 0px;
+    margin-right: 10px;
     font-family: "Inter Bold";
     font-size: 22px;
     line-height: 28px;
